# libdwg

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt
src/: bits.c  cmakeconfig.h.in  common.h  config.h.old  decode.c  decode_r2007.c  dwg.c  dwg_text_api.c  free.c  geojson_api.c  out_dxf.c  out_geojson.c  out_json.c  out_json.h
src/include/: dwg.h  dwg_text_api.h
test/: cad_oracle_probe.py  compare_geojson_text.py  compare_truth_sections.py  dwgread.c  getopt.c  inspect_encoded_hits.py  lwpolyline_area_probe.py  search_sections_text.py
